@@ -4,7 +4,7 @@ TAB = 12*' '
 
 NLTAB = ',\n'+TAB
 
-USAGE = """usage: autocode4.py [options]
+USAGE = """usage: autoload.py [options]
 
 Generates python code for a given database schema.
 
@@ -19,17 +19,36 @@ options:
 
     -i              --noindex       Do not generate index information
     -e              --example       Generate code with examples how to access data
+    -3              --z3c           Generate code for use with z3c.sqlalchemy
 """
 
 HEADER = """
-## File autogenerated by autocode4.py
+## File autogenerated by autoload.py
 ## see http://www.sqlalchemy.org/trac/wiki/UsageRecipes/AutoCode
 
 from sqlalchemy import *
 metadata = MetaData()
 """
 
-FOOTER = """
+HEADER_Z3C = """
+## File autogenerated by autoload.py
+## see http://www.sqlalchemy.org/trac/wiki/UsageRecipes/AutoCode
+## Export type: z3c.sqlalchemy
+
+from sqlalchemy import *
+
+from z3c.sqlalchemy import Model
+from z3c.sqlalchemy.mapper import MappedClassBase
+
+def getModel(metadata):
+    model = Model()
+"""
+
+FOOTER_Z3C = """
+    return model
+"""
+
+FOOTER_EXAMPLE = """
 # some example usage
 if __name__ == '__main__':
     url = '%(url)s'
@@ -63,14 +82,14 @@ TABLE = """ Table('%(name)s', metadata,
     %(constraints)s
     %(index)s
     %(schema)s
-)
+    )
 """
 
 TABLE_WO_INDEX = """ Table('%(name)s', metadata,
     %(columns)s,
     %(constraints)s
     %(schema)s
-)
+    )
 """
 
 COLUMN = """Column(%(name)r, %(type)s, %(constraints)s %(args)s)"""
